--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,13 +18,14 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.7.0 <3.0.0"
+  sdk: ">=2.12.0 <3.0.0"
 
 dependencies:
   flutter:
     sdk: flutter
-  appwrite: ^0.4.0
-  fast_color_picker: ^0.0.2
+  appwrite: ^0.6.0
+  smooth_page_indicator: ^0.3.0-nullsafety.0
+  spring_button: ^2.0.0
 
 dev_dependencies:
   flutter_test:
