--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,7 +23,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  appwrite: ^0.6.0
+  appwrite: 0.6.2
   smooth_page_indicator: ^0.3.0-nullsafety.0
   spring_button: ^2.0.0
 
